# TaskEditGraph

./: .gitignore  CMakeLists.txt  README.md
.trae/documents/: plan_taskedit_refactor.md
.trae/specs/implement-task-editor/: checklist.md  spec.md  tasks.md
src/: addtaskdialog.cpp  addtaskdialog.h  addtaskdialog.ui  connectionitem.cpp  connectionitem.h  mainwindow.cpp  mainwindow.h  task.cpp  task.h  taskconditiondialog.cpp  taskconditiondialog.h  taskconditiondialog.ui  taskedithelper.cpp  taskedithelper.h  taskgraphscene.cpp  taskgraphscene.h  taskgraphview.cpp  taskgraphview.h  taskmodel.cpp  taskmodel.h  tasknodeitem.cpp  tasknodeitem.h
